Corrigindo layout das imagens
Added a hero image to the portfolio page and updated the header logo.

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     <header class="site-header">
       <div class="container header-inner">
         <div class="brand">
-          <!-- PNG gato logo Footer -->
+          <!-- PNG gato logo header -->
           <p>
             <img
               src="siamese-cat-clipart-ai-generated-free-png.webp"
               alt="gatinho fofo"
-              class="footer-cat"
+              class="header-cat"
             />
           </p>
           <div>
@@ -53,10 +53,16 @@
             <div class="cta-row">
               <a class="btn" href="#experiencia">Ver Experiência</a>
               <a class="btn ghost" href="CVP2025.pdf" download
-                >Baixar CV (PDF)</a
-              >
+                >Baixar CV (PDF)</a>
             </div>
           </div>
+        </div>
+        
+        <div class="hero-right">
+            <img src="patzyFoto.png" 
+              alt="Foto" 
+              width="665" 
+              height="738" />
         </div>
       </section>
           
@@ -214,5 +220,6 @@
     <script src="script.js"></script>
   </body>
 </html>
+
 
 
