--- a/index.html
+++ b/index.html
@@ -148,14 +148,24 @@
             <div class="skill">ITIL • Ágil</div>
           </div>
 
-          <h3>Formação</h3>
-          <p>
-            Análise e Desenvolvimento de Sistemas — UNINOVE (2019–2021)<br />
-            Administração de Empresas — UNINOVE (2015–2018)
-          </p>
+          <div class="facul">
+            <h3>Formação</h3>
+            <ul>
+              <li>
+                Análise e Desenvolvimento de Sistemas — UNINOVE (2019–2021)
+              </li>
+              <li>Administração de Empresas — UNINOVE (2015–2018)</li>
+            </ul>
 
-          <h3>Certificações</h3>
-          <p>AWS Discovery Day (Computação em Nuvem) • DIO - Python Day</p>
+            <h3>Certificações</h3>
+            <ul>
+              <li>Fundamentos de Python - DIO (2023)</li>
+              <li>ITIL Foundation v4 - PeopleCert (2021)</li>
+              <li>Ka Solution - Computação em Nuvem | AWS Discovery Day</li>
+              <li>DIO - Dev Week Java Beginners - Pedra,Papel e Tesoura</li>
+              <li>DIO - Python Day</li>
+            </ul>
+          </div>
         </div>
       </section>
 
@@ -217,4 +227,5 @@
     <script src="script.js"></script>
   </body>
 </html>
+
 
